# euklid

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  clippy.yml  coveralls.yml  release.yml  rust.yml  tests.yml
euklid-clocks/: Cargo.toml
euklid-clocks/examples/: clock_dot.rs  clock_dvv.rs  clock_vec.rs  dotx.rs
euklid-clocks/src/: causalord.rs  dot.rs  dvv.rs  gcounter.rs  lib.rs  pncounter.rs  vclock.rs
euklid-kmerge/: Cargo.toml
euklid-kmerge/examples/: kmerge.rs
euklid-kmerge/src/: lib.rs
euklid-num/: Cargo.toml
euklid-num/examples/: num_counter.rs
euklid-num/src/: lib.rs
euklid-num/src/dot/: counter.rs  mod.rs
euklid-num/src/identities/: mod.rs  one.rs  zero.rs
euklid-num/src/ops/: decrementable.rs  incrementable.rs  mod.rs
euklid-old/: Cargo.toml
euklid-old/examples/: dot.rs  gcounter.rs  pncounter.rs  vclock.rs
euklid-old/src/: dot.rs  gcounter.rs  lib.rs  pncounter.rs  vclock.rs
examples/: dot.rs  gcounter.rs  pncounter.rs  vclock.rs
src/: actors.rs  counters.rs  dot.rs  gcounter.rs  lib.rs  pncounter.rs  traits.rs  vclock.rs
