[package]
name = "euklid"
description = "Library for CRDT"
version = "0.0.3"
authors = ["Vlad Eminovici veminovici@hotmail.com"]
license = "Apache-2.0"
homepage = "https://github.com/veminovici/euklid"
repository = "https://github.com/veminovici/euklid"
documentation = "https://docs.rs/euklid"
keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.release]
debug = true
